# cfr

./: .gitignore  BR.h  CFR.h  CMakeLists.txt  EHSmontecarlo.h  Group32runtimeBucket  Group32runtimeBucket.cpp  Group32runtimeBucket.py  Node.cpp  Node.h  Parser.cpp  Parser.h  README.md  bucketPrecom.cpp  coba  coba.cpp  coba.sh  compile.sh  deploy.sh  generate.cpp  generate.sh  handevaluator  handevaluator.cpp  main.cpp  makefile  montecarlo.cpp  montecarlotofile  runtimeBucket.py  verify.cpp
Abstractors/: AbstractorEHS2.cpp  AbstractorEHS2.h  AbstractorPreflop.h
DeepCFR/: buffer.py  config.py  nn.py  poker_state.py  test.py
EHSCalc/: EHSCalc.cpp  EHSCalc.h
Game/: State.h
KuhnGame/: KuhnState.cpp  KuhnState.h
PokerGame/: EHSCalc.cpp  EHSCalc.h  PokerHand.cpp  PokerHand.h  PokerHandProvider.cpp  PokerHandProvider.h  PokerState.cpp  PokerState.h
